[workspace]
members=[]
resolver="3"

[workspace.package]
version = "0.1.0"
description = "The imposssible polyfill"

[workspace.dependencies]
swc_atoms = "^8.0.0"
swc_common = "^16.0.0"
swc_ecma_ast = "^17.0.0"
swc_ecma_compat_es2015 = "^32.0.0"
swc_ecma_minifier = "^35.0.0"
swc_ecma_transforms_base = "^29.0.0"
swc_ecma_transforms_optimization = "^31.0.0"
swc_ecma_utils = "^23.0.0"
swc_ecma_visit = "^17.0.0"
swc_bundler = "^34.0.0"
swc_ecma_loader = "^16.0.0"
swc_ecma_parser = "^26.0.0"
swc_ecma_codegen = "^19"


portal-solutions-swibb = { version = "^0.5.0", git = "https://github.com/portal-co/swibb.git" }